--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900;
+}
+nav a {
+  padding: 10px;
+  background: lightgray;
+}
+figcaption {
+  text-align: center;
+}
+#featured-property p {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
+div {
+  text-align: center;
+  float: left;
+  width: 25%;
+  background: red;
+}
